src/test/deca/context/invalid/sansObjet/initialisation.deca
// Description :
//    Initialisation invalide : utilisation de la variable dans sa propre initialisation.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Variable x non déclarée

{
    int x = x+1;
}